# python-bip39

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  bip39.py  bump.sh  setup.cfg  setup.py
src/bip39/: __init__.py
tests/: bip39  test_bip39.py
