[metadata]
name = bip39
version = 0.0.1
author = Aljosha Judmayer and Philipp Schindler 
author_email = ajudmayer@sba-research.org
description = A self-contained and simple BIP39 implemenation in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/de-centralized-systems/python-bip39
project_urls =
    Bug Tracker = https://github.com/de-centralized-systems/python-bip39/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
